test/invalid/baseline/exception.txt
Syntax error at line 4 in exception.widl:
exception SomeException {
^ Unrecognised tokens
